--- a/main page.html
+++ b/main page.html
@@ -1,26 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encyclopedia Page</title>
+    <title>My Encyclopedia Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            color: # 0333;
             background-color: #f0f0f0;
             margin: 0;
             padding: 0;
         }
 
-        .header {
-            background-color: # 0333;
-            color: white;
-            padding: 10px;
-            text-align: center;
+        h1 {
+            font-size: 2em;
+            color: # 0088cc;
+            margin-bottom: 0.5em;
         }
 
-        .content {
-            padding: 20px;
+        p {
+            line-height: 1.5;
+            margin-bottom: 1em;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 1em;
         }
 
         .highlight {
@@ -29,13 +37,8 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>Encyclopedia Page</h1>
-    </div>
-    <div class="content">
-        <h2>Introduction</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+    <h1>Welcome to My Encyclopedia Page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-        <h2>History</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel sc  
+    <p>Donec  
  
