Added a background for the entire page

--- a/main page.html
+++ b/main page.html
@@ -4,41 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Encyclopedia Page</title>
+    <title>Encyclopedia Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            color: # 0333;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
+            background-color: #f0f0f0; 
         }
 
         h1 {
-            font-size: 2em;
-            color: # 0088cc;
-            margin-bottom: 0.5em;
+            color: # 0333;
+            font-size: 24px;
+            text-align: center;
         }
 
         p {
+            color: # 0666; 
+            font-size: 16px;
             line-height: 1.5;
-            margin-bottom: 1em;
+            margin-bottom: 20px;
         }
 
         img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 1em;
-        }
-
-        .highlight {
-            color: #ff0000;
+            width: 300px;
+            height: 200px;
+            display: block;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Encyclopedia Page</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <p>Donec  
+    <h1>Encyclopedia Page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu vestibulum nisi. Integer non nisl at nulla tincidunt bibendum. Sed ultrices quam non sapien mollis, id lacinia erat feugiat. Vivamus fringilla, nunc id euismod rutrum, purus mauris tincidunt felis, sit amet fermentum nisl lectus non lectus. Praesent molestie lobortis nisl, vitae mattis nunc ultrices id. Aliquam erat volutpat. Proin at est sit amet erat faucibus mattis. Nulla facilisi. Suspendisse potenti. Sed pellentesque mi in nibh tempor, vel mollis nunc tincid  
  
