Added jump page button.

--- a/main page.html
+++ b/main page.html
@@ -33,5 +33,14 @@
 </head>
 <body>
     <h1>Encyclopedia Page</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu vestibulum nisi. Integer non nisl at nulla tincidunt bibendum. Sed ultrices quam non sapien mollis, id lacinia erat feugiat. Vivamus fringilla, nunc id euismod rutrum, purus mauris tincidunt felis, sit amet fermentum nisl lectus non lectus. Praesent molestie lobortis nisl, vitae mattis nunc ultrices id. Aliquam erat volutpat. Proin at est sit amet erat faucibus mattis. Nulla facilisi. Suspendisse potenti. Sed pellentesque mi in nibh tempor, vel mollis nunc tincid  
- 
+ 
+        <body>
+            <h1>Button Example</h1>
+            <a class="button" href="#">Button 1</a>
+            <a class="button" href="#">Button 2</a>
+            <a class="button" href="#">Button 3</a>
+            <a class="button" href="#">Button 4</a>
+        </body>
+        </html>
+         
+        
